--- a/client/lib/l10n/app_en.arb
+++ b/client/lib/l10n/app_en.arb
@@ -11,5 +11,16 @@
   "settingsTermsOfService": "Terms of service",
   "settingsCommunityGuidelines": "Community Guidelines",
   "settingsPrivacyPolicy": "Privacy Policy",
-  "searchInputHolder": "Where do you want to go?"
+  "searchInputHolder": "Where do you want to go?",
+  "authEmail": "Email",
+  "authUsername": "Username",
+  "authPassword": "Password",
+  "authForgotPassword": "Forgot password?",
+  "authSignIn": "Sign in",
+  "authSignUp": "Sign up",
+  "authNoAccount": "Don't have an account?",
+  "authHaveAccount": "Already have an account?",
+  "authSignInWith": "Sign in with",
+  "authSignUpWith": "Sign up with"
+  
 }
