Update .arb files for authentication

--- a/client/lib/l10n/app_pl.arb
+++ b/client/lib/l10n/app_pl.arb
@@ -8,7 +8,7 @@
   "searchInputHolder": "Dokąd chcesz się udać?",
   "authEmail": "Adres e-mail",
   "authUsername": "Nazwa użytkownika",
-  "authPassword": "hasło",
+  "authPassword": "Hasło",
   "authForgotPassword": "Zapomniałeś hasła?",
   "authSignIn": "Zaloguj się",
   "authSignUp": "Zarejestruj się",
