--- a/client/lib/l10n/app_pl.arb
+++ b/client/lib/l10n/app_pl.arb
@@ -6,6 +6,8 @@
   "settingsCommunityGuidelines": "Wytyczne społeczności",
   "settingsPrivacyPolicy": "Polityka prywatności",
   "searchInputHolder": "Dokąd chcesz się udać?",
+  "authLoginHeading": "Witaj ponownie",
+  "authRegisterHeading": "Załóz konto",
   "authEmail": "Adres e-mail",
   "authUsername": "Nazwa użytkownika",
   "authPassword": "Hasło",
